# VGE

./: .gitignore  .gitmodules  changes.md  go.mod  go.sum  license.md  readme.md
assets/envhdr/: studio.hdr
assets/fonts/: fonts.md
cpp/: CMakeLists.txt
cpp/vgelib/: app.cpp  app.hpp  command.cpp  command.hpp  descriptor.cpp  descriptor.hpp  desktop.cpp  desktop.hpp  font.hpp  glslcompiler.cpp  glslcompiler.hpp  image.hpp  memory.cpp  memory.hpp  pipeline.cpp  pipeline.hpp  renderpass.cpp  renderpass.hpp  vgelib.hpp  vgelib_if.cpp  vgelib_if.hpp  vgelib_if_impl.inc
cpp/vgelib/common/: stb_font.cpp  stb_image.cpp
docs/: architecture.md  build_vgelib.md  credits.md  linux_install.md  roadmap.md  vdraw.md  vdraw3d.md  vgecompile.md  vimage.md  vimgui.md  vk.md  vmodel.md  vscene.md  vui.md
examples/animate/: main.go  scene.go
examples/basic/: basic_samples.md  hello.go  logo.go  logo_an.go  logo_anim.go
examples/basicn/: basicn_samples.md  hello.go  logo.go  logo_anim.go
examples/cube/: main.go
examples/fileviewer/: browse.go  drives.go  drives_windows.go  generate.go  image.fragment.glsl  imageframe.glsl  imageviewer.go  main.go  modelview.go  programs.json  quad.vertex.glsl  textviewer.go  viewer.go
examples/gallery/: dialog.go  main.go  page2.go  page3.go
examples/gltfviewer/: main.go  readme.md  samples.go  ui.go
examples/model/: main.go
examples/robomaze/: main.go  maze.go  maze_test.go  robo.go  stain.go  start.go
examples/ui/: main.go
examples/webview/: index.go  main.go  render.go
prebuilt/linux_amd64/: readme.md
tests/draw3dtest/: debug.go  main.go
tests/mattest/: decal.go  firetest.go  main.go  ui.go
tests/modelviewer/: main.go  render.go
tools/codegen/: genenum.go  geninterface.go  interface.go  main.go
tools/packspv/: main.go
tools/vgecompile/: main.go
vge/deferred/: debug.go  frame.glsl  frame.go  lights.frag.glsl  lights.frag.spv  lights.go  lights.vert.glsl  lights.vert.spv  renderpass.go  shader.go
vge/dldyn/: dl.go
vge/forward/: frame.glsl  frame.go  phases.go  renderer.go
vge/fplus/: copy.frag.glsl  copy.frag.spv  copy.go  copy.vert.glsl  copy.vert.spv  renderer.go  shaders.go
vge/shaders/: config.go  shaderpack.go  shadertool.go
vge/vanimation/: builder.go  bvh.go  bvh_test.go
vge/vapp/: app.go  assets.go  camera.go  copy.frag.glsl  copy.frag.spv  eventloop.go  eventloop_test.go  events.go  forwardrenderer.go  keys.go  renderwin.go  shaders.go  tri.vert.glsl  tri.vert.spv  viewwindow.go  win.go
vge/vasset/: dds.go  imageloader.go  loader.go  manager.go
vge/vdraw/: area.go  brush.go  brush_test.go  canvas.go  canvas_test.go  copy.comp.glsl  copy.comp.spv  draw.frag.glsl  draw.frag.spv  draw.geom.glsl  draw.geom.spv  draw.glsl  draw.vert.glsl  draw.vert.spv  draw_glyph.frag.spv  drawable.go  filled.go  filled_test.go  font.go  font_test.go  glyph.go  glyph_test.go  path.comp.glsl  path.comp.spv  path.go  shader.go  shape.go  shape_test.go
vge/vdraw3d/: background.go  decal.go  draw.go  frozen.go  generate.go  lights.go  pick.go  probe.go  shadervars.go  view.go
vge/vglyph/: builder.go  builder_test.go  copy.comp.glsl  copy.comp.spv  copy_rgb.comp.glsl  copy_rgb.comp.spv  draw.go  draw_test.go  glyph.frag.glsl  glyph.frag.spv  glyph.glsl  glyph.vert.glsl  glyph.vert.spv  palette.go  set.go  shaders.go  testhelper.go  vbuilder.go  vbuilder_test.go  vdepth.comp.glsl  vdepth.comp.spv
vge/vimgui/: controls.go  layouts.go  number.go  state.go  styles.go  textbox.go  uiframe.go  view.go
vge/vk/: allocator.go  allocator_test.go  apicontext.go  application.go  application_test.go  command.go  compiler.go  compiler_test.go  consts.go  descriptor.go  desktop.go  enums.go  format.go  framecache.go  framecache_test.go  handles.go  image.go  libcall_linux_amd64.go  libcall_windows_amd64.go  memory.go  pipeline.go  rendercache.go  renderpass.go  renderpass_test.go  spinlock.go  support.go  support_test.go
vge/vmodel/: aabb.go  builder.go  compute.go  copier.go  genmip.comp.glsl  genmip.comp.spv  material.go  model.go  shaders.go  skin.go
vge/vscene/: animate.go  camera.go  frame.go  input.glsl  light.go  node.go  phases.go  (+6 more)
(+222 files in other folders)
